zellij-server/src/plugins/unit/snapshots/zellij_server__plugins__plugin_tests__reconfigure_plugin_command.snap
---
source: zellij-server/src/plugins/./unit/plugin_tests.rs
assertion_line: 6571
expression: "format!(\"{:#?}\", reconfigure_event)"
---
Some(
    Reconfigure(
        1,
        "\n                        keybinds {\n                            locked {\n                                bind \"a\" { NewTab; }\n                            }\n                        }\n                    ",
    ),
)
