zellij-server/src/plugins/unit/snapshots/zellij_server__plugins__plugin_tests__rename_layout_not_found_plugin_command.snap
---
source: zellij-server/src/plugins/./unit/plugin_tests.rs
expression: "format!(\"{:#?}\", plugin_bytes_event)"
---
Some(
    "Rename nonexistent layout error: Layout 'nonexistent_layout' not found\n\r",
)
