zellij-server/src/plugins/unit/snapshots/zellij_server__plugins__plugin_tests__request_plugin_permissions.snap
---
source: zellij-server/src/plugins/./unit/plugin_tests.rs
expression: "format!(\"{:#?}\", new_tab_event)"
---
Some(
    [
        ChangeApplicationState,
        ReadApplicationState,
        ReadApplicationState,
        ChangeApplicationState,
        OpenFiles,
        RunCommands,
        OpenTerminalsOrPlugins,
        WriteToStdin,
        WebAccess,
        ReadCliPipes,
        MessageAndLaunchOtherPlugins,
        Reconfigure,
        WriteToClipboard,
        RunActionsAsUser,
        ReadSessionEnvironmentVariables,
    ],
)
