zellij-server/src/plugins/unit/snapshots/zellij_server__plugins__plugin_tests__rerun_command_pane_plugin_command.snap
---
source: zellij-server/src/plugins/./unit/plugin_tests.rs
assertion_line: 6951
expression: "format!(\"{:#?}\", rerun_command_pane_event)"
---
Some(
    RerunCommandPane(
        1,
    ),
)
