zellij-server/src/plugins/unit/snapshots/zellij_server__plugins__plugin_tests__resize_pane_with_id_plugin_command.snap
---
source: zellij-server/src/plugins/./unit/plugin_tests.rs
assertion_line: 7056
expression: "format!(\"{:#?}\", rerun_command_pane_event)"
---
Some(
    ResizePaneWithId(
        ResizeStrategy {
            resize: Increase,
            direction: Some(
                Left,
            ),
            invert_on_boundaries: false,
        },
        Terminal(
            2,
        ),
    ),
)
